update follow user
