# portfolio/app/Models/Follow.php
@@ -4,6 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Support\Facades\DB;
 
 class Follow extends Model
 {
@@ -14,14 +15,20 @@ class Follow extends Model
 
     protected $dates = ['follow_date'];
 
-    //Người theo dõi
+    protected $primaryKey = ['follower_id', 'following_id'];
+    public $incrementing = false; // Không sử dụng auto-increment ID
+    protected $keyType = 'array';
+
+    // Người theo dõi
     public function follower()
     {
         return $this->belongsTo(User::class, 'follower_id');
     }
+
     // Đang theo dõi
     public function following()
     {
         return $this->belongsTo(User::class, 'following_id');
     }
+
 }
